--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Trilha de CSS - DIO</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+  </style>
 </head>
 <body>
   <header class="banner">
